# hh_checked

./: README.md  db.json  main.py  pyproject.toml  settings.py
repo/: json_db.py
services/: hh.py  tg_api.py
